<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainOrange"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:src="@drawable/im_background_gray"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingBottom="0dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/im_logo" />

        <ScrollView
            android:layout_width="371dp"
            android:layout_height="426dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/baloo"
                    android:gravity="center"
                    android:text="@string/do_login_text"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:layout_constraintTop_toBottomOf="@+id/img_logo" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/email_login"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login" />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/im_background_input_white"
                    android:drawableStart="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                <TextView
                    android:id="@+id/tv_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/password_login"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    app:layout_constraintTop_toBottomOf="@+id/ed_email" />

                <EditText
                    android:id="@+id/ed_senha"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/im_background_input_white"
                    android:drawableStart="@drawable/ic_senha"
                    android:inputType="textPassword"
                    android:paddingStart="11dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_senha" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/baloo"
                    android:onClick="RecoverPassword"
                    android:text="@string/forget_password_login"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="268dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/im_login_button"
                    android:onClick="SignIn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.333"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:layout_width="268dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/im_signin_button"
                    android:onClick="SignUp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.333"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>